Sat Jul 30 07:20:49 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb (udp_server_sockets): unused variable
	  removed.
	  patch by Jeremy Evans.  [ruby-core:38600]

Fri Jul 29 23:56:32 2011  Tanaka Akira  <akr@fsij.org>

	* lib/securerandom.rb: call OpenSSL::Random.seed at the
	  SecureRandom.random_bytes call.
	  based on the patch by Masahiro Tomita.  [ruby-dev:44270]

Fri Jul 29 23:53:48 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_set_len): new function to set array length.

	* vm_eval.c (method_missing): set the length of argv array, to mark
	  arguments.

	* vm_eval.c (rb_apply): get rid of too large alloca.

Fri Jul 29 20:48:39 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb: fix typos.

Fri Jul 29 20:28:56 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb: use whitespaces as a separator.

Fri Jul 29 18:59:07 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb: add documents for constants.
	  patch by Eric Hodel.  [ruby-core:37853] [Bug #4989]

Fri Jul 29 16:00:43 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in (enable_pthread): use -pthread on OpenBSD without
	  explicit option. patched by Jeremy Evans. [ruby-core:38572]

Thu Jul 28 23:36:28 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* ext/fiddle/closure.c (callback): use rb_ary_tmp_new() instead of
	  xmalloc() to allocate an array for arguments of callback procedure,
	  to prevent arguments from being swept by GC. [ruby-core:38546]
	  [Bug #4929]

Thu Jul 28 22:36:06 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/openssl/ossl_cipher.c (ossl_cipher_initialize): Avoid possible
	  SEGV from AES encryption/decryption. Processing data by
	  Cipher#update without initializing key (meaningless usage of Cipher
	  object since we don't offer a way to export a key) could cause SEGV.

	  In OpenSSL, the EVP which has EVP_CIPH_RAND_KEY flag (such as DES3)